# AutoPaintRobot

./: mbot_linux_serial.cpp  robot.cpp  robot_bringup.cpp
devel/: .catkin
devel/lib/pkgconfig/: autopaintrobot.pc
src/autopaintrobot/: CMakeLists.txt  package.xml
src/autopaintrobot/scripts/: ErrrorHandler.py  TODO.md  auto_painting_robot.py  autopaintrobot.py  globals.py  kalman_filter.py  linear_module.py  main.py  robot_state.py  track_vehicle.py
src/can_test/: CMakeLists.txt  package.xml
src/can_test/config/: param.yaml
src/can_test/launch/: can.launch
src/can_test/msg/: CustomControlMsg.msg
src/can_test/scripts/: joy_to_pcan_node.py  pcan.ipynb  pcan_cybergear.py
src/can_test/src/: can_demo_01.cpp  can_demo_02.cpp  can_receive_node.cpp  can_sent_node.cpp  can_test.cpp  cmd_vel_to_can_node.cpp  joy_to_cmd_vel.cpp  joy_to_cmd_vel_node.cpp  joy_to_message_node.cpp  joy_to_serial_node.cpp  message_to_serial_node.cpp
src/joy_control/: package.xml
src/joy_control/launch/: joy_to_twist.launch
src/robot_bringup/: package.xml
src/robot_bringup/robot_bringup/: CMakeLists.txt  readme
src/robot_bringup/robot_bringup/include/robot_bringup/: robot.h
src/robot_bringup/robot_bringup/launch/: robot_bringup.launch
src/robot_bringup/robot_bringup/param/: speedparam.yaml
src/robot_bringup/robot_bringup/src/: mbot_linux_serial.cpp  robot_bringup.cpp
src/tank_control/: package.xml
src/test/: CMakeLists.txt
src/test/config/: control.yaml
src/test/launch/: control.launch  display.launch
src/test/scripts/: drive_wheel.py
src/test/urdf/: test.urdf
(+25 files in other folders)
